SED-4062 Making logback configurable for forked agents